--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -1,9 +1,6 @@
-{% extends "base.html" %}
-
-{% block title %}Log-in{% endblock %}
-
 {% block content %}
-  <h1>Employee Login</h1>
+  <h1>Good Shepard Food Pantry</h1>
+  <h2>Employee Login</h2>
   {% if form.errors %}
     <p>
       Your username and password didn't match.
