--- a/account/templates/account/home.html
+++ b/account/templates/account/home.html
@@ -3,9 +3,9 @@
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
 
-{% block title %}Dashboard{% endblock %}
+{% block title %}Home{% endblock %}
 
 {% block content %}
-  <h1>Good Shepard Food Pantry Dashboard</h1>
-  <p>Welcome to your Dashboard!</p>
+  <h1>Good Shepard Food Pantry Home</h1>
+  <h3>Welcome to the Home Page!</h3>
 {% endblock %}
