--- a/portfolio/templates/registration/login.html
+++ b/portfolio/templates/registration/login.html
@@ -1,6 +1,7 @@
+{% extends "base.html" %}
 {% block content %}
-  <h1>Good Shepard Food Pantry</h1>
-  <h2>Employee Login</h2>
+  <h1>Good Shepherd Food Pantry</h1>
+  <h2>System Login</h2>
   {% if form.errors %}
     <p>
       Your username and password didn't match.
