Template updates and views/urls bug fixes

--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -4,7 +4,7 @@
             {% if user.is_authenticated %}
                 <div class="page-container">
                     <h2 class="top-menu">Hello {{ user.username }},</h2>
-                    <p>Together we end hunger in Omaha!</p>
+                    <p>Welcome to the Good Shepherd Food Pantry System! Together we end hunger in Omaha!</p>
 
                 </div>
             {% endif %}
