--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link rel="stylesheet" href="../css/fullwidth.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <style>
@@ -13,6 +14,9 @@
         .navbar {
             margin-bottom: 0;
             border-radius: 0;
+            background-color:#D2EAFA;
+            font-size: 1.1em !important;
+            font-weight: bold;
         }
 
         /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
@@ -23,13 +27,13 @@
         /* Set gray background color and 100% height */
         .sidenav {
             padding-top: 20px;
-            background-color: #f1f1f1;
+            background-color: red;
             height: 100%;
         }
 
         /* Set black background color, white text and some padding */
         footer {
-            background-color: #555;
+            background-color: #777;
             color: white;
             padding: 15px;
         }
@@ -49,13 +53,16 @@
 </head>
 
 <body id="app-layout">
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header">
 
             <!-- Collapsed Hamburger -->
             <button type="button" class="navbar-toggle" data-toggle="collapse"
                     data-target="#myNavbar">
+
+
+
                 <span class="sr-only">Toggle Navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -72,8 +79,9 @@
                 <li><a href="{% url 'portfolio:item_list' %}">Inventory</a></li>
                 <li><a href="{% url 'portfolio:employee_list' %}">Manage Employees</a></li>
                 <li><a href="{% url 'portfolio:donor_list' %}">Manage Donors</a></li>
-                <li><a href="{#}">Record Client Visit</a></li>
-                <li><a href="{#}">Checkout</a></li>
+                <li><a href="{% url 'portfolio:home' %}">Record Client Visit</a></li>
+                <li><a href="{% url 'portfolio:home' %}">Checkout</a></li>
+                <li><a href="{% url 'portfolio:account_settings_list' %}">Account Settings</a></li>
                 <li>
                   <a href="{% url "logout" %}">Logout</a>
                 </li>
@@ -90,7 +98,7 @@
                     <!-- Example row of columns -->
                     <div class="row">
                         <div class="col-md-3">
-                            <div class="thumbnail">
+                            <div class="rounded">
                                 <img src="{% static "images/client.jpg" %}" alt="Client"/>
                                 <div class="caption">
                                     <h2>Client</h2>
@@ -104,7 +112,7 @@
                             </div>
                         </div>
                         <div class="col-md-10">
-                            <div class="thumbnail">
+                            <div class="rounded">
                                 <img src="{% static "images/employee.jpg" %}" alt="Employee"/>
                                 <div class="caption">
                                     <h2>Employee</h2>
@@ -116,7 +124,7 @@
                             </div>
                         </div>
                         <div class="col-md-10">
-                            <div class="thumbnail">
+                            <div class="rounded">
                                 <img src="{% static "images/Donor.jpg" %}" alt="Donor"/>
                                 <div class="caption">
                                     <h2>Donor</h2>
@@ -127,7 +135,7 @@
                             </div>
                         </div>
                         <div class="col-md-10">
-                            <div class="thumbnail">
+                            <div class="rounded">
                                 <img src="{% static "images/Item.jpg" %}" alt="Item"/>
                                 <div class="caption">
                                     <h2>Item</h2>
