Template updates and views/urls bug fixes

--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -125,7 +125,7 @@
                         </div>
                         <div class="col-md-10">
                             <div class="rounded">
-                                <img src="{% static "images/donor.jpg" %}" alt="Donor"/>
+                                <img src="{% static "images/donor3.jpg" %}" alt="Donor"/>
                                 <div class="caption">
                                     <h2>Donor</h2>
                                     <p>Support our mission with your time, talent, and treasure</p>
@@ -136,7 +136,7 @@
                         </div>
                         <div class="col-md-10">
                             <div class="rounded">
-                                <img src="{% static "images/item.jpg" %}" alt="Item"/>
+                                <img src="{% static "images/item3.jpg" %}" alt="Item"/>
                                 <div class="caption">
                                     <h2>Item</h2>
                                     <p>Inventory Management</p>
