--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -40,7 +40,7 @@
                   </div>
                   <div class="col-md-3">
                       <div class="thumbnail">
-                          <img src="{% static "images/Donor.jpg" %}" alt="Donor"/>
+                          <img src="{% static "images/donor.jpg" %}" alt="Donor"/>
                           <div class="caption">
                               <h2>Donor</h2>
                               <p>Support our mission with your time, talent, and treasure</p>
@@ -51,7 +51,7 @@
                   </div>
                   <div class="col-md-3">
                       <div class="thumbnail">
-                          <img src="{% static "images/Item.jpg" %}" alt="Item"/>
+                          <img src="{% static "images/item.jpg" %}" alt="Item"/>
                           <div class="caption">
                               <h2>Item</h2>
                               <p>Inventory Management</p>
