--- a/portfolio/templates/registration/password_change_form.html
+++ b/portfolio/templates/registration/password_change_form.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Change you password{% endblock %}
+{% block title %}Change your password{% endblock %}
 
 {% block content %}
   <h1>Change you password</h1>
