--- a/portfolio/templates/base.html
+++ b/portfolio/templates/base.html
@@ -82,7 +82,7 @@
                 <li><a href="{% url 'portfolio:home' %}">Record Client Visit</a></li>
                 <li><a href="{% url "shop:product_list" %}">Shop</a></li>
                 <li><a href="{% url "cart:cart_detail" %}">Cart</a></li>
-                <li><a href="{% url 'portfolio:home' %}">Checkout</a></li>
+                <li><a href="{% url "orders:order_create" %}">Checkout</a></li>
                 <li><a href="{% url 'portfolio:account_settings_list' %}">Account Settings</a></li>
                 <li>
                   <a href="{% url "logout" %}">Logout</a>
