Record client visit

--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -60,9 +60,6 @@
             <!-- Collapsed Hamburger -->
             <button type="button" class="navbar-toggle" data-toggle="collapse"
                     data-target="#myNavbar">
-
-
-
                 <span class="sr-only">Toggle Navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -79,7 +76,7 @@
                 <li><a href="{% url 'portfolio:item_list' %}">Inventory</a></li>
                 <li><a href="{% url 'portfolio:employee_list' %}">Manage Employees</a></li>
                 <li><a href="{% url 'portfolio:donor_list' %}">Manage Donors</a></li>
-                <li><a href="{% url 'portfolio:home' %}">Record Client Visit</a></li>
+                <li><a href="{% url 'portfolio:visit_list' %}">Record Client Visit</a></li>
                 <li><a href="{% url 'portfolio:home' %}">Checkout</a></li>
                 <li><a href="{% url 'portfolio:account_settings_list' %}">Account Settings</a></li>
                 <li>
@@ -115,7 +112,8 @@
                             <div class="rounded">
                                 <img src="{% static "images/employee.jpg" %}" alt="Employee"/>
                                 <div class="caption">
-                                    <h2>Employee</h2>
+                                    <h2>Empl
+                                        oyee</h2>
                                     <p>Together we can end hunger in Omaha</p>
                                     <p><a class="btn btn-default" href="{% url 'portfolio:employee_list' %}"
                                            role="button">View
@@ -146,10 +144,23 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="col-md-10">
+                            <div class="rounded">
+                                <img src="{% static "images/image1.jpg" %}" alt="Visit"/>
+                                <div class="caption">
+                                    <h2>Item</h2>
+                                    <p>Client Visit Record</p>
+                                    <p><a class="btn btn-default" href="{% url 'portfolio:visit_list' %}"
+                                           role="button">View
+                                        details &raquo;</a></p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                </div>
-            {% endblock %}
+            {%endblock %}
         </div>
+        </div>
+    </div>
     </div>
 </body>
 </html>
