--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -49,6 +49,17 @@
                           </div>
                       </div>
                   </div>
+                            <div class="col-md-3">
+                      <div class="thumbnail">
+                          <img src="{% static "images/image1.png" %}" alt="Visit"/>
+                          <div class="caption">
+                              <h2>Visit</h2>
+                              <p>Track Client Visit</p>
+                              <p><a class="btn btn-default" href="{% url 'portfolio:visit_list' %}" role="button">View
+                                  details &raquo;</a></p>
+                          </div>
+                      </div>
+                  </div>
                   <div class="col-md-3">
                       <div class="thumbnail">
                           <img src="{% static "images/item.jpg" %}" alt="Item"/>
