--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -79,7 +79,7 @@
                 <li><a href="{% url 'portfolio:item_list' %}">Inventory</a></li>
                 <li><a href="{% url 'portfolio:employee_list' %}">Manage Employees</a></li>
                 <li><a href="{% url 'portfolio:donor_list' %}">Manage Donors</a></li>
-                <li><a href="{% url 'portfolio:home' %}">Record Client Visit</a></li>
+                <li><a href="{% url 'portfolio:visit_list' %}">Record Client Visit</a></li>
                 <li><a href="{% url "shop:product_list" %}">Shop</a></li>
                 <li><a href="{% url "cart:cart_detail" %}">Cart</a></li>
                 <li><a href="{% url "orders:order_create" %}">Checkout</a></li>
