--- a/portfolio/templates/base.html
+++ b/portfolio/templates/base.html
@@ -75,11 +75,11 @@
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
                 <li><a href="{% url 'portfolio:home' %}">Home</a></li>
-                <li><a href="{% url 'portfolio:client_list' %}">Manage Clients</a></li>
+                <li><a href="{% url 'portfolio:client_list' %}">Clients</a></li>
                 <li><a href="{% url 'portfolio:item_list' %}">Inventory</a></li>
-                <li><a href="{% url 'portfolio:employee_list' %}">Manage Employees</a></li>
-                <li><a href="{% url 'portfolio:donor_list' %}">Manage Donors</a></li>
-                <li><a href="{% url 'portfolio:visit_list' %}">Record Client Visit</a></li>
+                <li><a href="{% url 'portfolio:employee_list' %}">Employees</a></li>
+                <li><a href="{% url 'portfolio:donor_list' %}">Donors</a></li>
+                <li><a href="{% url 'portfolio:visit_list' %}">Visits</a></li>
                 <li><a href="{% url "shop:product_list" %}">Shop</a></li>
                 <li><a href="{% url "cart:cart_detail" %}">Cart</a></li>
                 <li><a href="{% url "orders:order_create" %}">Checkout</a></li>
