Added export to CSV and print receipt functionality

--- a/orders/templates/admin/orders/order/detail.html
+++ b/orders/templates/admin/orders/order/detail.html
@@ -49,7 +49,7 @@
   </tr>
   <tr>
     <th>Status</th>
-    <td>{% if order.paid %}Paid{% else %}Pending payment{% endif %}</td>
+    <td>{% if order.paid %}Paid{% else %}Paid{% endif %}</td>
   </tr>
 </table>
 
