--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -16,8 +16,8 @@
                       <div class="thumbnail">
                           <img src="{% static "images/client.jpg" %}" alt="Client"/>
                           <div class="caption">
-                              <h2>Client</h2>
-                              <p> Emergency food relief for those in need</p>
+                              <h2>Clients</h2>
+                              <p>Add, edit, or delete clients</p>
                               {% if user.is_authenticated %}
                                   <p><a class="btn btn-default" href="{% url 'portfolio:client_list' %}"
                                         role="button">View
@@ -26,12 +26,65 @@
                           </div>
                       </div>
                   </div>
+
                   <div class="col-md-3">
                       <div class="thumbnail">
-                          <img src="{% static "images/employee.jpg" %}" alt="Employee"/>
+                          <img src="{% static "images/visit.jpg" %}" alt="Visits"/>
                           <div class="caption">
-                              <h2>Employee</h2>
-                              <p>Together we can end hunger in Omaha</p>
+                              <h2>Visits</h2>
+                              <p>Add, edit, or delete visits</p>
+                              <p><a class="btn btn-default" href="{% url 'portfolio:visit_list' %}"
+                                     role="button">View
+                                  details &raquo;</a></p>
+                          </div>
+                      </div>
+                    </div>
+
+                  <div class="col-md-3">
+                      <div class="thumbnail">
+                          <img src="{% static "images/shop.jpg" %}" alt="Shop"/>
+                          <div class="caption">
+                              <h2>Shop</h2>
+                              <p>Browse current inventory</p>
+                              <p><a class="btn btn-default" href="{% url "shop:product_list" %}"
+                                     role="button">View
+                                  details &raquo;</a></p>
+                          </div>
+                      </div>
+                    </div>
+
+                    <div class="col-md-3">
+                        <div class="thumbnail">
+                            <img src="{% static "images/cart.jpg" %}" alt="Cart"/>
+                            <div class="caption">
+                                <h2>Cart</h2>
+                                <p>Review selected products</p>
+                                <p><a class="btn btn-default" href="{% url "cart:cart_detail" %}"
+                                       role="button">View
+                                    details &raquo;</a></p>
+                            </div>
+                        </div>
+                      </div>
+
+                      <div class="col-md-3">
+                          <div class="thumbnail">
+                              <img src="{% static "images/checkout.jpg" %}" alt="Checkout"/>
+                              <div class="caption">
+                                  <h2>Checkout</h2>
+                                  <p>Inventory Management</p>
+                                  <p><a class="btn btn-default" href="{% url "orders:order_create" %}"
+                                         role="button">View
+                                      details &raquo;</a></p>
+                              </div>
+                          </div>
+                        </div>
+
+                  <div class="col-md-3">
+                      <div class="thumbnail">
+                          <img src="{% static "images/employees.jpg" %}" alt="Employee"/>
+                          <div class="caption">
+                              <h2>Employees</h2>
+                              <p>View food pantry employees</p>
                               <p><a class="btn btn-default" href="{% url 'portfolio:employee_list' %}"
                                      role="button">View
                                   details &raquo;</a></p>
@@ -40,10 +93,10 @@
                   </div>
                   <div class="col-md-3">
                       <div class="thumbnail">
-                          <img src="{% static "images/donor.jpg" %}" alt="Donor"/>
+                          <img src="{% static "images/thedonor.jpg" %}" alt="Donor"/>
                           <div class="caption">
-                              <h2>Donor</h2>
-                              <p>Support our mission with your time, talent, and treasure</p>
+                              <h2>Donors</h2>
+                              <p>View food pantry donors</p>
                               <p><a class="btn btn-default" href="{% url 'portfolio:donor_list' %}" role="button">View
                                   details &raquo;</a></p>
                           </div>
@@ -51,16 +104,17 @@
                   </div>
                   <div class="col-md-3">
                       <div class="thumbnail">
-                          <img src="{% static "images/item.jpg" %}" alt="Item"/>
+                          <img src="{% static "images/setting.jpg" %}" alt="Account Settings"/>
                           <div class="caption">
-                              <h2>Item</h2>
-                              <p>Inventory Management</p>
-                              <p><a class="btn btn-default" href="{% url 'portfolio:item_list' %}"
+                              <h2>Settings</h2>
+                              <p>Edit account settings</p>
+                              <p><a class="btn btn-default" href="{% url 'portfolio:account_settings_list' %}"
                                      role="button">View
                                   details &raquo;</a></p>
                           </div>
                       </div>
                     </div>
+
                 </div>
               </div>
           </div>
