--- a/portfolio/templates/portfolio/client_list.html
+++ b/portfolio/templates/portfolio/client_list.html
@@ -7,6 +7,7 @@
         <meta charset="UTF-8">
         <title>Good Shepherd Food Pantry</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
     </head>
     <body>
@@ -50,15 +51,34 @@
                 height: auto;
             }
         }
-    </style>
+</style>
+
+<script>
+$(document).ready(function(){
+    $('.search').on('keyup',function(){
+        var searchTerm = $(this).val().toLowerCase();
+        $('#userTbl tbody tr').each(function(){
+            var lineStr = $(this).text().toLowerCase();
+            if(lineStr.indexOf(searchTerm) === -1){
+                $(this).hide();
+            }else{
+                $(this).show();
+            }
+        });
+    });
+});
+</script>
 
 
-
-    <div class="row">
+<div class="row">
         <h2 style="padding-left: 15Px">Clients Information</h2>
     </div>
+
+    <div class="form-group pull-right">
+    <input type="text" class="search form-control" placeholder="What you looking for?">
+</div>
     <div>
-        <table class="table table-striped table-bordered table-hover">
+        <table class="table table-striped table-bordered table-hover" id="userTbl">
             <thead>
             <tr class="bg-info">
                 <th>Client Number</th>
@@ -72,6 +92,7 @@
                 <th colspan="3">Actions</th>
             </tr>
             </thead>
+</thead>
             <tbody>
             {% for client in clients %}
                 <tr>
@@ -93,10 +114,11 @@
             </tbody>
         </table>
                   <div class="row">
-                    <a href="{% url 'portfolio:client_new' %}" class="row"><span
-                    class="btn btn-primary">Add client</span></a>
+                    <a href="{% url 'portfolio:client_new' %}" class="row"><span class="btn btn-primary">Add client</span></a>
                     </div>
     </div>
+
     </body>
     </html>
 {% endblock %}
+
