Added search functionality for vistis, employees, and donors

--- a/portfolio/templates/portfolio/client_list.html
+++ b/portfolio/templates/portfolio/client_list.html
@@ -70,7 +70,7 @@ $(document).ready(function(){
     </div>
 
     <div class="form-group pull-right">
-    <input type="text" class="search form-control" placeholder="What you looking for?">
+    <input type="text" class="search form-control" placeholder="What are you looking for?">
 </div>
     <div>
         <table class="table table-striped table-bordered table-hover" id="userTbl">
