--- a/portfolio/templates/portfolio/donor_list.html
+++ b/portfolio/templates/portfolio/donor_list.html
@@ -7,6 +7,7 @@
         <meta charset="UTF-8">
         <title>Good Shepherd Food Pantry</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
     </head>
     <body>
@@ -52,9 +53,28 @@
         }
     </style>
 
+    <script>
+    $(document).ready(function(){
+        $('.search').on('keyup',function(){
+            var searchTerm = $(this).val().toLowerCase();
+            $('#userTbl tbody tr').each(function(){
+                var lineStr = $(this).text().toLowerCase();
+                if(lineStr.indexOf(searchTerm) === -1){
+                    $(this).hide();
+                }else{
+                    $(this).show();
+                }
+            });
+        });
+    });
+    </script>
 
     <div class="row">
+      <div class="row">
         <h2 style="padding-left: 15Px">Donors Information</h2>
+    </div>
+    <div class="form-group pull-right">
+         <input type="text" class="search form-control" placeholder="Who are you looking for?">
     </div>
     <div>
         <table class="table table-striped table-bordered table-hover">
