--- a/portfolio/templates/portfolio/visit_list.html
+++ b/portfolio/templates/portfolio/visit_list.html
@@ -7,6 +7,7 @@
         <meta charset="UTF-8">
         <title>Good Shepherd Food Pantry</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
     </head>
     <body>
@@ -52,12 +53,32 @@
         }
     </style>
 
+    <script>
+    $(document).ready(function(){
+        $('.search').on('keyup',function(){
+            var searchTerm = $(this).val().toLowerCase();
+            $('#userTbl tbody tr').each(function(){
+                var lineStr = $(this).text().toLowerCase();
+                if(lineStr.indexOf(searchTerm) === -1){
+                    $(this).hide();
+                }else{
+                    $(this).show();
+                }
+            });
+        });
+    });
+    </script>
 
     <div class="row">
+      <div class="row">
         <h2 style="padding-left: 15Px">Client Visit Information</h2>
     </div>
+    <div class="form-group pull-right">
+         <input type="text" class="search form-control" placeholder="What are you looking for?">
+    </div>
+
     <div>
-        <table class="table table-striped table-bordered table-hover">
+        <table class="table table-striped table-bordered table-hover" id="userTbl">
             <thead>
             <tr class="bg-info">
                 <th>Client Number</th>
@@ -69,6 +90,9 @@
                 <th colspan="3">Actions</th>
             </tr>
             </thead>
+
+</thead>
+
             <tbody>
             {% for visit in visits %}
                 <tr>
