--- a/portfolio/templates/portfolio/donor_list.html
+++ b/portfolio/templates/portfolio/donor_list.html
@@ -77,7 +77,7 @@
          <input type="text" class="search form-control" placeholder="Who are you looking for?">
     </div>
     <div>
-        <table class="table table-striped table-bordered table-hover">
+        <table class="table table-striped table-bordered table-hover" id="userTbl">
             <thead>
             <tr class="bg-info">
                 <th>Donor Number</th>
