--- a/portfolio/templates/portfolio/client_new.html
+++ b/portfolio/templates/portfolio/client_new.html
@@ -1,8 +1,42 @@
 {% extends 'portfolio/base.html' %}
 {% block content %}
+    <div style="alignment:center">
     <h1>Add a New Client</h1>
      <form method="POST" class="client-form">{% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="save btn btn-default">Save</button>
+        <label>{{ form.name.label_tag }}</label>
+         <br>
+         {{ form.name }}
+         <br>
+         <label>{{ form.address.label_tag }}</label>
+         <br>
+         {{ form.address }}
+         <br>
+         <label>{{ form.client_number.label_tag }}</label>
+         <br>
+         {{ form.client_number }}
+         <br>
+         <label>{{ form.city.label_tag }}</label>
+         <br>
+         {{ form.city }}
+         <br>
+         <label>{{ form.state.label_tag }}</label>
+         <br>
+         {{ form.state }}
+         <br>
+         <label>{{ form.zipcode.label_tag }}</label>
+         <br>
+         {{ form.zipcode }}
+         <br>
+         <label>{{ form.email.label_tag }}</label>
+         <br>
+         {{ form.email }}
+         <br>
+         <label>{{ form.cell_phone.label_tag }}</label>
+         <br>
+         {{ form.cell_phone }}
+         <br>
+         <br>
+         <button type="submit" class="save btn btn-default">Save</button>
     </form>
+    </div>
 {% endblock %}
