--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -115,6 +115,17 @@
                       </div>
                     </div>
 
+                      <div class="col-md-3">
+                      <div class="thumbnail">
+                          <img src="{% static "images/notifications.png" %}" alt="Pantry Notifications"/>
+                          <div class="caption">
+                              <h2>Notifications</h2>
+                              <p>View pantry notifications</p>
+                              <p><a class="btn btn-default" href="{% url 'portfolio:notifications' %}"
+                                     role="button">View</a></p>
+                          </div>
+                      </div>
+                    </div>
                 </div>
               </div>
           </div>
